server: edit swagger
