# server/src/routes/clientsRoute.js
@@ -1,9 +1,10 @@
 const { Router } = require("express");
 const ClientsController = require("../controllers/ClientsController");
+const authenticator = require("../middlewares/authenticator");
 
 const router = Router();
 
-router.get("/clients", ClientsController.getClients);
+router.get("/clients", authenticator, ClientsController.getClients);
 router.post("/clients", ClientsController.createClient);
 
 module.exports = router;
