# server/src/swagger.json
@@ -11,6 +11,11 @@
       "get": {
         "summary": "Get a list of clients",
         "operationId": "getClients",
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
         "responses": {
           "200": {
             "description": "List of clients"
